[tool.poetry]
name = "liquid-app-flask"
version = "0.1.0"
description = ""
authors = ["redxzeta <xzetanzero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.0"
Flask = "^1.1.2"
dnspython = "^2.0.0"
gunicorn = "^20.0.4"
Flask-Cors = "^3.0.9"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
